# booklet

./: .dockerignore  .env.example  CLAUDE.md  COPYRIGHT.md  Cargo.toml  LICENSE.md  README.md  ROADMAP.md  build.rs  docker-compose.yml
booklet-core/: Cargo.toml
booklet-core/src/: config.rs  document.rs  engine.rs  image.rs  lib.rs  links.rs  merge.rs  render.rs  search.rs  sync.rs  tags.rs  vault.rs
booklet-sync-client/: Cargo.toml
booklet-sync-client/src/: client.rs  engine.rs  lib.rs  secret.rs
booklet-sync-client/tests/: integration.rs
booklet-sync-proto/: Cargo.toml
booklet-sync-proto/src/: lib.rs
booklet-sync-server/: Cargo.toml  DEPLOY.md  Dockerfile  README.md
booklet-sync-server/migrations/: 0001_initial.sql  0002_admin.sql  0003_accounts_billing.sql  0004_plans.sql  0005_plan_display.sql  0006_vault_delete.sql
booklet-sync-server/src/: app.rs  auth.rs  billing.rs  blob.rs  http.rs  lib.rs  mail.rs  main.rs  store.rs
booklet-sync-server/src/admin/: accounts.rs  actions.rs  mod.rs  pages.rs  panel.css  plans.rs  session.rs  site.rs  view.rs
design/: reference.html  sync-server.md
qml/: EditorView.qml  Main.qml  Marginalia.qml  Theme.qml  TreePane.qml
src/: library.rs  links.rs  main.rs  note.rs  sync.rs
src/booklet/: ActionRow.qml  AppMenu.qml  AppMenuItem.qml  BindingDialog.qml  CloneDialog.qml  DeleteVaultDialog.qml  EditorView.qml  Icon.qml  IconButton.qml  Main.qml  Marginalia.qml  Notice.qml  QuickSwitcher.qml  SettingSlider.qml  SettingsPane.qml  SettingsView.qml  ShelfView.qml  SignInDialog.qml  StarMap.qml  StatusBar.qml  TabStrip.qml  TextButton.qml  Theme.qml  TopBar.qml  TreePane.qml  VaultPicker.qml  VersionHistory.qml  fonts.qrc  qmldir
src/cpp/: clipboard_image.cpp  clipboard_image.h  markdown_highlighter.cpp  markdown_highlighter.h
vault/Systems Engineering/: Smoke Test Note.md  folio.json
vault/Systems Engineering/Kernel/Debugging/Pixel 7/: CFI violations.md  KGDB setup.md  Port log.md
vault/Systems Engineering/Kernel/Graphics/: Wayland and KMS.md
vault/Theologie/: booklet.json
