[package]
name = "booklet"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"

[dependencies]
booklet-core = { path = "booklet-core" }
qtbridge = { version = "0.2", features = ["serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
notify = "8.2.0"

[workspace]
members = ["booklet-core"]
resolver = "2"
