[package]
name = "booklet"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"

[dependencies]
booklet-core = { path = "booklet-core" }
qtbridge = { version = "0.2", features = ["serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
notify = "8.2.0"

[workspace]
members = ["booklet-core", "booklet-sync-proto", "booklet-sync-server", "booklet-sync-client"]
resolver = "2"

[build-dependencies]
cc = "1.2.67"
qtbridge-build-utils = "0.2"
